--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@ html,
 body {
   margin: 0;
   padding: 0;
-}
-canvas {
   display: flex;
   justify-content: center;
+}
+canvas {
+  margin-top: 50px;
 }
